--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^1.2.0",
-    "@material-ui/icons": "^1.1.0",
     "axios": "^0.18.0",
+    "bootstrap": "^4.0.0-beta.2",
     "material-ui-pickers": "^1.0.0-rc.9",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
