--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-material-ui-form-validator": "^2.0.0-beta.10",
+    "react-modal": "^3.4.5",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
