--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-select": "^2.0.0-beta.6",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "thunk": "0.0.1"
