--- a/package.json
+++ b/package.json
@@ -3,17 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.4.0",
     "axios": "^0.18.0",
-    "bootstrap": "^4.0.0-beta.2",
-    "material-ui-pickers": "^1.0.0-rc.9",
+    "materialize-css": "^1.0.0-rc.2",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
-    "react-material-ui-form-validator": "^2.0.0-beta.10",
     "react-modal": "^3.4.5",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "react-select": "^2.0.0-beta.6",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "thunk": "0.0.1"
